# scop

./: .gitignore  CMakeLists.txt  Makefile
assets/shaders/fragment/: colors.glsl  combine.glsl  fragment.glsl  shades.glsl  texture.glsl
assets/shaders/vertex/: combine.glsl  shades.glsl  texture.glsl  vertex.glsl
ext/glad/: .gitignore  CMakeLists.txt  Makefile
ext/glad/include/glad/: gl.h  glad.h
ext/glad/src/: glad.c
include/: BMPLoader.hpp  GLContext.hpp  Mat4.hpp  Mesh.hpp  MeshLoader.hpp  Model.hpp  ModelLoader.hpp  Scop.hpp  Shader.hpp  ShaderProgram.hpp  Texture.hpp  TransformableShaderProgram.hpp  TransitionShaderProgram.hpp  Vec3.hpp  Window.hpp
src/: BMPLoader.cpp  GLContext.cpp  Mat4.cpp  Mesh.cpp  MeshLoader.cpp  Model.cpp  ModelLoader.cpp  Scop.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  TransformableShaderProgram.cpp  TransitionShaderProgram.cpp  Vec3.cpp  Window.cpp  main.cpp
